tests/errmsgs/texpected_label_1.nim
discard """
  errormsg: "expected the name of a label, but got: 1 + 1"
  line: 7
"""

block:
  break 1 + 1